# dikes-for-dummies

./: 404.html  README.md  changelog.html  dev_scripts.py  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  study_case.html
.github/workflows/: docs.yml
chapters/: 01_project_setup.html  02_never_trust_the_user.html  03_object_oriented_programming.html  04_the_pythonic_way.html  05_testing_101.html  06_creating_interfaces.html  07_creating_documentation.html  08_building_the_tool.html
dikesfordummies/: __init__.py  dfd_logger.py  dike_plot.py  main.py  workflows.py
dikesfordummies/dike/: dike_input.py  dike_profile.py  dike_profile_builder.py  dike_profile_protocol.py  dike_reinforcement_input.py  dike_reinforcement_profile.py
dikesfordummies/gui/: main.py  utils.py
docs/: changelog.md  index.md  study_case.md
docs/chapters/: 01_project_setup.md  02_never_trust_the_user.md  03_object_oriented_programming.md  04_the_pythonic_way.md  05_testing_101.md  06_creating_interfaces.md  07_creating_documentation.md  08_building_the_tool.md
docs/github/: styles.css
docs/reference/: dike.md
docs/with_pdf_templates/: cover.html.j2
github/: styles.css
makefile/: __init__.py  version_compile.py
reference/: dike.html
search/: search_index.json
tests/: __init__.py  test_main.py
tests/dike/: test_dike_input.py  test_dike_profile.py  test_dike_profile_builder.py  test_dike_profile_protocol.py  test_dike_reinforcement_input.py  test_dike_reinforcement_profile.py
tests/gui/: test_main.py
with_pdf_templates/: cover.html.j2  styles.scss
